# pytest-runner

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  LICENSE  README  README.rst  README.txt  command.py  ptr.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
docs/: conf.py  index.rst
tests/: requirements.txt  test_ptr.py
