[metadata]
license_files =
	LICENSE
name = pytest-runner
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Invoke py.test as distutils command with dependency resolution
long_description = file:README.rst
url = https://github.com/pytest-dev/pytest-runner/
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Pytest

[options]
packages = find_namespace:
py_modules = ptr
include_package_data = true
python_requires = >=3.6
install_requires =
	# setuptools 27.3 is required at run time
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	pytest-enabler

	# local
	pytest-virtualenv

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
distutils.commands =
	ptr = ptr:PyTest
	pytest = ptr:PyTest
