[metadata]
license_files =
	LICENSE
name = pytest-runner
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Invoke py.test as distutils command with dependency resolution
long_description = file:README.rst
url = https://github.com/pytest-dev/pytest-runner/
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Pytest

[options]
packages = find_namespace:
py_modules = ptr
include_package_data = true
python_requires = >=3.6
install_requires =
	# setuptools 27.3 is required at run time
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# python_implementation: workaround for jaraco/skeleton#22
	# python_version: workaround for python/typed_ast#156
	pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10"
	pytest-cov
	# python_implementation: workaround for jaraco/skeleton#22
	# python_version: workaround for python/typed_ast#156
	pytest-mypy; python_implementation != "PyPy" and python_version < "3.10"
	pytest-enabler >= 1.0.1

	# local
	pytest-virtualenv

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
distutils.commands =
	ptr = ptr:PyTest
	pytest = ptr:PyTest
