[metadata]
name = pytest-runner
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Invoke py.test as distutils command with dependency resolution
long_description = file:README.rst
url = https://github.com/pytest-dev/pytest-runner/
classifiers =
	Development Status :: 7 - Inactive
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Pytest

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	# setuptools 27.3 is required at run time

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local
	pytest-virtualenv
	types-setuptools

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
distutils.commands =
	ptr = ptr:PyTest
	pytest = ptr:PyTest
